fixed styles on mobile

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,5 @@
 #app {
-    width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: var(--light-blue-100);
 }
 
@@ -21,12 +20,14 @@
 .main-container {
     --padding-left: 15px;
     --padding-right: 15px;
+    --padding-bottom: 5px;
+    padding-bottom: var(--padding-bottom);
     display: grid;
     width: 100%;
     height: 100%;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    grid-template-rows: 96px 1.2fr 0.6fr 0.7fr;
+    grid-template-rows: 96px 450px 150px 300px;
     grid-auto-flow: row;
     grid-template-areas:
         "header header"
@@ -117,6 +118,7 @@
 .solution {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     grid-area: solution;
 }
@@ -135,7 +137,7 @@
 }
 
 .result {
-    width: 60%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -146,7 +148,7 @@
 #result-text {
     font-size: 24px;
     color: var(--gray-400);
-    max-height: 50px;
+    max-height: 100px;
     overflow: hidden;
     overflow-y: auto;
     word-break: break-word;
@@ -194,7 +196,7 @@
 @media (min-width: 768px) {
     .main-container {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 96px 1.6fr 0.2fr 0.7fr;
+        grid-template-rows: 96px 1.5fr 0.2fr 1fr;
         grid-auto-flow: row;
         grid-template-areas:
             "header header"
@@ -203,6 +205,11 @@
             "solution solution";
         --padding-left: 45px;
         --padding-right: 45px;
+        --padding-bottom: 10px;
+    }
+
+    #app {
+        height: 100vh;
     }
 
     .actions {
@@ -223,6 +230,7 @@
         column-gap: 40px;
         --padding-left: 80px;
         --padding-right: 30px;
+        --padding-bottom: 0px;
     }
 
     #result-text {
